# microservices_fastapi

project_01/: docker-compose.yml
project_01/cast-service/: pyproject.toml  requirements.txt
project_01/cast-service/app/api/: db.py
project_01/movie-service/: pyproject.toml
project_01/movie-service/app/: main.py
project_01/movie-service/app/api/: db.py  models.py  movies.py
project_02/: README.md
project_02/auth/: database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  service.py
project_02/gateway/: main.py  pyproject.toml  requirements.txt  rpc_client.py  schemas.py
project_02/ml_services/: main.py  pyproject.toml  utils.py
project_02/notification_service/: email_service.py  main.py  pyproject.toml  requirements.txt
