[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Princekrampah <jsksprince@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "^4.1.3"
cryptography = "^42.0.8"
email-validator = "^2.1.1"
fastapi = "^0.111.0"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.3"
pydantic-core = "^2.18.4"
pyjwt = "^2.8.0"
sqlalchemy = "^2.0.30"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.1"
python-multipart = "^0.0.9"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
